--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
-    <script src="./assets/js/vendor/underscore-min.js"></script>
-    <script src="./assets/js/vendor/backbone-min.js"></script>
-    <script src="./assets/js/vendor/backbone.marionette.min.js"></script>
+    <script src="./assets/js/lib/underscore-min.js"></script>
+    <script src="./assets/js/lib/backbone-min.js"></script>
+    <script src="./assets/js/lib/backbone.marionette.min.js"></script>
     <script src="./assets/js/app.js"></script>
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/custom.css" rel="stylesheet">
